Atualizando o titulo da aba e trocando o icone.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercicio1</title>
+    <title>Conversão de velocidade</title>
     <link rel="stylesheet" type="text/css" href="style.css" media="screen">
+      <link rel="icon" type="image/png" href="Icone/Painel.png">
     <script src="Funcoes.js" defer></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-    </style>
+
 </head>
 <body>
     <main>
